--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^1.2.1",
     "framer-motion": "^10.6.1",
     "next": "13.2.4",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
