--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-tooltip": "^5.10.1",
     "typescript": "5.0.2"
   },
   "devDependencies": {
