Mudando tooltip para radix-ui

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-radio-group": "^1.1.2",
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-slot": "^1.0.1",
+    "@radix-ui/react-tooltip": "^1.0.5",
     "@tanem/react-nprogress": "^5.0.32",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
@@ -23,7 +24,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-tooltip": "^5.10.1",
     "typescript": "5.0.2"
   },
   "devDependencies": {
