--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-tooltip": "^4.2.4",
     "clsx": "^1.2.1",
     "framer-motion": "^10.6.1",
     "next": "13.2.4",
